--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <meta property="og:image" content="https://www.example.com/images/og-cover.jpg">
   <meta property="og:image:alt" content="Amir hossein Mohammadian Fard">
   <meta property="og:site_name" content="Amir Portfolio">
+  <meta name="google-site-verification" content="yPeqqdqHmaTQiaPyiosvP8ES_OTQIPwNEeRzrkSlFkY" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
