--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <meta property="og:image" content="https://www.example.com/images/og-cover.jpg">
   <meta property="og:image:alt" content="Amir hossein Mohammadian Fard">
   <meta property="og:site_name" content="Amir Portfolio">
-  <meta name="google-site-verification" content="yPeqqdqHmaTQiaPyiosvP8ES_OTQIPwNEeRzrkSlFkY" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
@@ -25,7 +24,7 @@
   <meta name="twitter:image" content="https://www.example.com/images/og-cover.jpg">
 
   <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" href="12.png" sizes="32x32">
 
   <!-- Fonts & CSS -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -68,7 +67,7 @@
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target" id="ftco-navbar" role="navigation" aria-label="Primary">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Amir MFK<span>.</span></a>
+      <a class="navbar-brand" href="index.html">Amirhossein Mohammadian<span></span></a>
       <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
       </button>
@@ -103,7 +102,6 @@
                 <h1 class="mb-4 mt-3">Designing and building delightful Projects</h1>
                 <p>
                   <a href="#contact-section" class="btn btn-primary">Start a project</a>
-                  
                 </p>
               </div>
             </div>
@@ -124,7 +122,7 @@
                 <span class="subheading">We design & build </span>
                 <h1 class="mb-4 mt-3">Hi, I’m <span>Amirhossein Mohammadian Fard</span>.</h1>
                 <p>
-                  <a href="#contact-section" class="btn btn-primary btn-outline-primary">Get in touch</a>
+                  <a href="https://scholar.google.com/citations?user=Y6ijwtwAAAAJ&hl=en" class="btn btn-primary btn-outline-primary">See Articles</a>
                 </p>
               </div>
             </div>
@@ -203,11 +201,10 @@
                 <p>I really love coding and design PCBs, CAD Files and Back-end Web Apis.</p>
 
                 <ul class="about-info mt-4 px-md-0 px-2">
-                  <li class="d-flex"><span>Name:</span> <span>Amir hossein Mohammadian</span></li>
+                  <li class="d-flex"><span>Name:</span> <span>Amir hossein Mohammadian Fard</span></li>
                   <li class="d-flex"><span>Date of birth:</span> <span>January 01, 1998</span></li>
                   <li class="d-flex"><span>Address:</span> <span>Iran/Tabriz</span></li>
                   <li class="d-flex"><span>Email:</span> <span><a href="mailto:amirmh1975988@gmail.com">amirmh1975988@gmail.com</a></span></li>
-                  <li class="d-flex"><span>Phone:</span> <span><a href="tel:+989147563229">+989147563229</a></span></li>
                 </ul>
               </div>
               <div class="col-md-12">
@@ -220,9 +217,9 @@
                   </div>
                   <div class="interest-wrap d-flex align-items-center">
                     <div class="icon d-flex align-items-center justify-content-center">
-                      <span class="flaticon-suitcases" aria-hidden="true"></span>
+                      <span class="flaticon-computer" aria-hidden="true"></span>
                     </div>
-                    <div class="text">Travel</div>
+                    <div class="text">Research</div>
                   </div>
                   <div class="interest-wrap d-flex align-items-center">
                     <div class="icon d-flex align-items-center justify-content-center">
@@ -232,9 +229,9 @@
                   </div>
                   <div class="interest-wrap d-flex align-items-center">
                     <div class="icon d-flex align-items-center justify-content-center">
-                      <span class="flaticon-football" aria-hidden="true"></span>
+                      <span class="flaticon-app-development" aria-hidden="true"></span>
                     </div>
-                    <div class="text">Sports</div>
+                    <div class="text">Coding</div>
                   </div>
                 </div>
               </div>
@@ -599,7 +596,7 @@
 						<h2 class="h5 font-weight-bold text-center mb-4">C(Embedded System design)</h2>
 
 						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='95'>
+						<div class="progress mx-auto" data-value='40'>
 							<span class="progress-left">
 								<span class="progress-bar border-primary"></span>
 							</span>
@@ -607,7 +604,7 @@
 								<span class="progress-bar border-primary"></span>
 							</span>
 							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">95<sup class="small">%</sup></div>
+								<div class="h2 font-weight-bold">40<sup class="small">%</sup></div>
 							</div>
 						</div>
 						<!-- END -->
@@ -632,8 +629,8 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-					<span class="subheading">I am grat at</span>
-					<h2 class="mb-4">We do awesome services for our clients</h2>
+					<span class="subheading">Let's do that</span>
+					<h2 class="mb-4">The Science is awesome</h2>
 					<p>You can trust to our skills</p>
 				</div>
 			</div>
@@ -789,14 +786,7 @@
 								<p><span>Address:</span> Iran-Tarbiz </p>
 							</div>
 						</div>
-						<div class="dbox w-100 d-flex">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="fa fa-phone"></span>
-							</div>
-							<div class="text">
-								<p><span>Phone:</span> <a href="tel://1234567920">+989147563229</a></p>
-							</div>
-						</div>
+
 						<div class="dbox w-100 d-flex">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="fa fa-paper-plane"></span>
@@ -810,7 +800,7 @@
 								<span class="fa fa-globe"></span>
 							</div>
 							<div class="text">
-								<p><span>Website</span> <a href="#">https://amirmfk.github.io/qbt</a></p>
+								<p><span>Linkedin</span> <a href="https://ir.linkedin.com/in/amirhosein-mohammadian-a91000149?original_referer=https%3A%2F%2Fwww.google.com%2F">Click Here</a></p>
 							</div>
 						</div>
 					</div>
@@ -860,14 +850,14 @@
 						<div class="block-23 mb-3">
 							<ul>
 								<li><span class="icon fa fa-map marker"></span><span class="text">Iran - Tabriz</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+98 914 756 3229</span></a></li>
-								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">amirmh1975988@gmail.com</span></a></li>
+								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">Send Email please</span></a></li>
+								<li><a href="#"><span class="icon fa fa-chevron-right pr-4"></span><span class="text">amirmh1975988@gmail.com</span></a></li>
 							</ul>
 						</div>
 						<ul class="ftco-footer-social list-unstyled mt-2">
-							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="twitter.com/amirmfk"><span class="fa fa-twitter"></span></a></li>
+							<li class="ftco-animate"><a href="telegram.me/amirmfk"><span class="fa fa-paper-plane"></span></a></li>
+							<li class="ftco-animate"><a href="github.com/amirmfk"><span class="fa fa-github"></span></a></li>
 						</ul>
 					</div>
 				</div>
